fix: decrease outline-offset to fix clipped kanban title outline.

--- a/styles/protyle/database.scss
+++ b/styles/protyle/database.scss
@@ -886,7 +886,7 @@ img.av__cellassetimg {
 
 .b3-chip {
   outline: 0.5px solid var(--b3-border-color-trans);
-  outline-offset: -0.5px;
+  outline-offset: -1px;
 }
 
 .b3-menu {
